Format project with AStyle
Project has been formatted using AStyle.

--- a/Wordle.cbp
+++ b/Wordle.cbp
@@ -16,6 +16,7 @@
 					<Add directory="./" />
 					<Add directory="io" />
 					<Add directory="utils" />
+					<Add directory="model/" />
 				</Compiler>
 			</Target>
 		</Build>
@@ -28,6 +29,8 @@
 		<Unit filename="io/DictionaryReader.cpp" />
 		<Unit filename="io/DictionaryReader.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="model/Dictionary.cpp" />
+		<Unit filename="model/Dictionary.h" />
 		<Unit filename="utils/Utils.cpp" />
 		<Unit filename="utils/Utils.h" />
 		<Extensions>
