Add dictionary validity check for guesses

--- a/Wordle.cbp
+++ b/Wordle.cbp
@@ -41,6 +41,9 @@
 		<Unit filename="utils/Utils.h" />
 		<Unit filename="view/WordleMainWindow.cpp" />
 		<Unit filename="view/WordleMainWindow.h" />
-		<Extensions />
+		<Extensions>
+			<code_completion />
+			<debugger />
+		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
