Add classes for user accounts and management
Add UserAccount and AccountManager for handling user accounts.

--- a/Wordle.cbp
+++ b/Wordle.cbp
@@ -37,6 +37,8 @@
 		<Unit filename="main.cpp" />
 		<Unit filename="model/Dictionary.cpp" />
 		<Unit filename="model/Dictionary.h" />
+		<Unit filename="model/UserAccount.cpp" />
+		<Unit filename="model/UserAccount.h" />
 		<Unit filename="utils/Utils.cpp" />
 		<Unit filename="utils/Utils.h" />
 		<Unit filename="view/WordleMainWindow.cpp" />
