Added ApplicationColors.cpp to Project file.

--- a/Wordle.cbp
+++ b/Wordle.cbp
@@ -47,6 +47,7 @@
 		<Unit filename="model/Dictionary.h" />
 		<Unit filename="model/UserAccount.cpp" />
 		<Unit filename="model/UserAccount.h" />
+		<Unit filename="utils/ApplicationColors.cpp" />
 		<Unit filename="utils/ApplicationColors.h" />
 		<Unit filename="utils/Utils.cpp" />
 		<Unit filename="utils/Utils.h" />
