--- a/Wordle.cbp
+++ b/Wordle.cbp
@@ -22,6 +22,8 @@
 					<Add directory="controller" />
 					<Add directory="view/" />
 					<Add directory="viewmodel/" />
+					<Add directory="io/" />
+					<Add directory="model" />
 				</Compiler>
 			</Target>
 		</Build>
@@ -38,17 +40,19 @@
 		<Unit filename="io/AccountReader.h" />
 		<Unit filename="io/AccountWriter.cpp" />
 		<Unit filename="io/AccountWriter.h" />
+		<Unit filename="io/ColorReader.cpp" />
+		<Unit filename="io/ColorReader.h" />
 		<Unit filename="io/DictionaryReader.cpp" />
 		<Unit filename="io/DictionaryReader.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="model/AccountManager.cpp" />
 		<Unit filename="model/AccountManager.h" />
+		<Unit filename="model/ApplicationColors.cpp" />
+		<Unit filename="model/ApplicationColors.h" />
 		<Unit filename="model/Dictionary.cpp" />
 		<Unit filename="model/Dictionary.h" />
 		<Unit filename="model/UserAccount.cpp" />
 		<Unit filename="model/UserAccount.h" />
-		<Unit filename="utils/ApplicationColors.cpp" />
-		<Unit filename="utils/ApplicationColors.h" />
 		<Unit filename="utils/Utils.cpp" />
 		<Unit filename="utils/Utils.h" />
 		<Unit filename="view/AccountSelectWindow.cpp" />
@@ -60,6 +64,9 @@
 		<Unit filename="view/WordleMainWindow.h" />
 		<Unit filename="viewmodel/GameViewmodel.cpp" />
 		<Unit filename="viewmodel/GameViewmodel.h" />
-		<Extensions />
+		<Extensions>
+			<code_completion />
+			<debugger />
+		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
